crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__message__json.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
{"message":"a plain message"}
--- stderr ---
