crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__message__plain.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
a plain message
--- stderr ---
